# Tenos-Resize-Img-Node

./: README.md  __init__.py  pyproject.toml  tenos_image_resize_target_pixels.py
.github/workflows/: publish_action.yml
