[project]
name = "Tenos_Resize_to_1M_Pixels"
description = "A zero nonsense ComfyUI node that resizes every incoming image (or batch) so the final resolution hovers around one million pixels—while respecting the original aspect ratio and snapping both dimensions to multiples of 64. Perfect for pipelines that need a predictable VRAM footprint without destroying composition."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Tenos-ai/Tenos-Resize-to-1-M-Pixels"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "tenosai"
DisplayName = "Tenos_Resize_to_1M_Pixels"
Icon = "https://avatars.githubusercontent.com/u/207890088?v=4&size=40"
